pa10/tests/type_error/assign_mismatch.uC
int a;

int main() {
	float b;
	b = a;
	return 0;
}
